================================================================================
CHANGELOG
================================================================================

	0.4.2.2
	Jul 3, 2009

	* extra/MusicXML.py: MusicXML exporting functions by Javier Palanca. 
	(started issue #63). 

================================================================================

	0.4.2.1
	Jul 2, 2009

	* midi/SequencerObserver.py: A new easy to extend base class that 
	can be used to observe Sequencer objects (closes issue #46).
	* midi/tunings.py: Added find_chord_fingering to StringTuning.
	(closes issue #70).
	* core/chords.py: Raise FormatError in from_shorthand if shorthand is 
	invalid.
	* containers/Track.py: Added from_chords (started issue #74).

================================================================================

	0.4.2.0
	Jul 2, 2009
	
	* extra/tablature.py: New tablature module is complete (closes issue #5)

================================================================================

	0.4.1.7
	Jul 1, 2009

	* extra/tablature.py: Raise the proper exceptions (closes issue #65), 
	added minimal unit test (closes issue #66), added attribute checks 
	(closes issue #51) and better docs.
	* extra/tunings.py: Raising proper exceptions. Added unit tests 
	(closes issue #52).
	* containers/Track.py: Added tuning attribute and set_tuning and 
	get_tuning method (closes issue #51).

================================================================================

	0.4.1.6
	Jun 29, 2009

	* extra/tablature.py: Added documentation and license (closes issue #59)
	* extra/tunings.py: Added get_Note(string, fret) to StringTuning.
	Closes issue #54.
	* extra/tablature.py: Do `fret` and `string` attribute checks on 
	Notes. Closes issue #64.

================================================================================

	0.4.1.5
	Jun 28, 2009

	* extra/tablature.py: Fixed bug in from_Suite, added add_headers (closes